fix(etl): resolve race condition in parallel execution
Implement file locking for UUID mapping and atomic writes with unique temp files to prevent WinError 32 on Windows. Also update gitignore to track output data.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # ============================================================================
 
 # Patient ID Mapping (original → UUID) - CONFIDENTIAL
-id_map.json
+# id_map.json
 id_map.json.encrypted
 
 # Encryption Keys & Secrets
@@ -144,7 +144,7 @@ data/raw_reports/*.pdf
 data/anonymized_reports/*.pdf
 
 # Generated metadata (can regenerate)
-data/patient_metadata.json
+# data/patient_metadata.json
 
 tests/output/
 
