--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ pytesseract>=0.3.10      # OCR text extraction via Tesseract
 pdf2image>=1.16.0        # PDF to image conversion for OCR
 fpdf2>=2.7.0             # Generate anonymized PDFs
 Pillow>=9.0.0            # Image processing (required by pdf2image)
+filelock>=3.13.0         # File locking for parallel execution safety
